feat: added download helper, working on sources
